--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form>
+        <form action="login.php" method="POST">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
 
@@ -64,6 +64,7 @@
 
             <button type="submit">Login</button>
         </form>
+
     </div>
 </body>
 </html>
