add birth search

--- a/dashboard.html
+++ b/dashboard.html
@@ -100,6 +100,7 @@
   <div class="sidebar">
     <h2>Dashboard</h2>
     <a href="#">🏠 Home</a>
+    <a href="birth.php">👶 Birth</a>
     <a href="#">📊 Reports</a>
     <a href="#">👥 Users</a>
     <a href="#">⚙️ Settings</a>
