--- a/dashboard.html
+++ b/dashboard.html
@@ -273,7 +273,7 @@
         <div class="tabs">
             <div class="tab active">Dashboard</div>
             <a href="detailed-search.html" class="tab">Detailed Search</a>
-            <a href="quick-search.html" class="tab">Quick Search</a>
+            <a href="quick-search.php" class="tab">Quick Search</a>
         </div>
 
         <h1 class="title">Welcome to Basud MBDIS Dashboard</h1>
